force-app/main/default/objects/Sales_Org_Temp__c/Sales_Org_Temp__c.object-meta.xml
<CustomObject>
    <description>This Objects receives the data from iPaaS.</description>
    <label>Sales Org Temp</label>
    <nameField>
        <label>Sales Org Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Org Temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>