force-app/main/default/objects/Sales_Org_Temp__c/fields/DCode_3__c.field-meta.xml
<CustomField>
    <fullName>DCode_3__c</fullName>
    <label>DCode 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>