force-app/main/default/objects/Sales_Org_Temp__c/fields/Effective_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_On_Date__c</fullName>
    <label>Effective On Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>