force-app/main/default/objects/Sales_Org_Temp__c/fields/Hierarchy_1__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_1__c</fullName>
    <label>Hierarchy 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>