force-app/main/default/objects/Sales_Org_Temp__c/fields/Hierarchy_2__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_2__c</fullName>
    <label>Hierarchy 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>