force-app/main/default/objects/Sales_Org_Temp__c/fields/Hierarchy_5__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_5__c</fullName>
    <label>Hierarchy 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>