force-app/main/default/objects/Sales_Org_Temp__c/fields/Is_Active_in_RoR__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_in_RoR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active in RoR?</label>
    <type>Checkbox</type>
</CustomField>