force-app/main/default/objects/Sales_Org_Temp__c/fields/Org_Code_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Org_Code_Country_Code__c</fullName>
    <label>Org Code Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>