force-app/main/default/objects/Sales_Org_Temp__c/fields/RoR_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>RoR_Update_Date__c</fullName>
    <label>RoR Update Date</label>
    <type>DateTime</type>
</CustomField>